Reset min-height CSS to prevent unnecessary vertical scrollbars

--- a/theme_overrides/css/theme_extra.css
+++ b/theme_overrides/css/theme_extra.css
@@ -38,6 +38,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .wy-nav-content-wrap {
   background-color: white;
+  min-height: auto;
 }
 
 .wy-nav-content {
